[package]
name = "ivf-rs"
version = "0.1.0"
authors = ["gibix <gibix@riseup.net>"]

[dependencies]
nom = "^4.0"
av-bitstream = { version = "0.1.0", git = "https://github.com/rust-av/rust-av" }
av-format = { version = "0.1.0", git = "https://github.com/rust-av/rust-av" }
av-data = { version = "0.1.0", git = "https://github.com/rust-av/rust-av" }
log = "0.4"

[dev-dependencies]
tempfile = "3"
pretty_env_logger = "0.2"
