[package]
name = "av-ivf"
version = "0.2.1"
authors = ["gibix <gibix@riseup.net>"]
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md"]
homepage = "https://github.com/rust-av/ivf-rs"
repository = "https://github.com/rust-av/ivf-rs"
description = "IVF muxer and demuxer"

[dependencies]
nom = "6.2"
av-bitstream = "0.1.2"
av-format = "0.3"
av-data = "0.3"
log = "0.4"

[dev-dependencies]
tempfile = "3"
structopt = "0.3"
pretty_env_logger = "0.4"
