[package]
name = "av-ivf"
version = "0.4.1"
authors = ["gibix <gibix@riseup.net>"]
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md"]
homepage = "https://github.com/rust-av/ivf-rs"
repository = "https://github.com/rust-av/ivf-rs"
description = "IVF muxer and demuxer"
edition = "2021"
rust-version = "1.56.1"

[dependencies]
av-bitstream = "0.2.0"
av-format = "0.6.0"
av-data = "0.4.0"
log = "0.4"
nom = "7.1"

[dev-dependencies]
tempfile = "3"
clap = { version = "^3.2", features = ["derive"] }
pretty_env_logger = "0.4"
